파일구조수정

--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,8 @@
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />   
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>React App</title>
-  </head>
+    <script src="https://kit.fontawesome.com/9b9cd344ff.js" crossorigin="anonymous"></script>
+
   </head>
   <body>
     <div id="root"></div>   
